! crashing when `stdbuf` is not available + `process-error` event ~ events emitter is now typed ~ deps bumped

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nfc-poll-wrapper",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "repository": "git@github.com:dzek69/nfc-poll-wrapper.git",
   "author": "Jacek Nowacki",
   "license": "MIT",
@@ -8,7 +8,7 @@
     "test": "NODE_ENV=test jest",
     "docs": "typedoc src/index.ts --out docs --listInvalidSymbolLinks --includes tutorials --theme pages-plugin --includeVersion",
     "compile": "yarn compile:esm && yarn compile:cjs",
-    "compile:esm": "rm -rf esm && tsc && node ./build-scripts/compile.esm.after.mjs",
+    "compile:esm": "rm -rf esm && tsc --project tsconfig.esm.json && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx,.mjs",
@@ -36,19 +36,20 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@dzek69/eslint-config-base": "^2.1.0",
-    "@dzek69/eslint-config-typescript": "^0.4.0",
+    "@dzek69/eslint-config-typescript": "^0.5.0",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^7.32.0",
     "fs-extra": "^9.0.1",
-    "husky": "^4.3.0",
-    "jest": "^27.0.6",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "must": "^0.13.4",
-    "nodemon": "^2.0.6",
-    "ts-node": "^9.0.0",
-    "typedoc": "^0.21.2",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0",
+    "typed-emitter": "^2.1.0",
+    "typedoc": "^0.21.10",
     "typedoc-plugin-pages-fork-fork": "^0.0.3",
     "typescript": "^4.2.4"
   },
@@ -58,7 +59,7 @@
     }
   },
   "libraryTemplate": {
-    "version": "3.3.2",
+    "version": "3.4.1",
     "language": "typescript",
     "fixDefaultForCommonJS": true,
     "jsx": false
